--- a/index.html
+++ b/index.html
@@ -1,38 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Learning Javascript</title>
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-			crossorigin="anonymous"
-		/>
-		<link rel="stylesheet" href="style.css" />
-	</head>
-	<body>
-		<div class="message">
-			<p class="text-light" id="message-value"></p>
-		</div>
-		<div class="coins d-flex align-items-center text-light">
-			<img class="coin-img" src="Coin.png" />
-			<p class="mb-0" id="coins">O</p>
-		</div>
-		<canvas id="canvas"></canvas>
-		<div class="row text-center">
-			<p class="text-light" id="room-notify"></p>
-		</div>
-		<form id="form" action="" method="GET">
-			<input type="text" name="testing" id="testing" />
-		</form>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Ninja Gold Gamble</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <div class="controls">
+            <p>"w" - Move up</p>
+            <p>"a" - Move left</p>
+            <p>"d" - Move right</p>
+            <p>"s" - Move down</p>
+            <p>"space" - Gamble when in "rooms"</p>
+        </div>
+        <div class="values">
+            <p>Cave | gain 0-5</p>
+            <p>House | gain 2-5</p>
+            <p>Farm | gain 10-20</p>
+            <p>Casino | gain/lose 0-50</p>
+        </div>
+        <div class="message">
+            <p class="text-light" id="message-value"></p>
+        </div>
+        <div class="coins d-flex align-items-center text-light">
+            <img class="coin-img" src="Coin.png" />
+            <p class="mb-0" id="coins">O</p>
+        </div>
+        <canvas id="canvas"></canvas>
+        <div class="row text-center">
+            <p class="text-light" id="room-notify"></p>
+        </div>
 
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-			crossorigin="anonymous"
-		></script>
-		<script src="app.js"></script>
-	</body>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+            crossorigin="anonymous"
+        ></script>
+        <script src="app.js"></script>
+    </body>
 </html>
